--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </nav>
       
-      <a href="https://bonton.com/" class="bx-logo"></a>
+      <a href="http://palaisroyal.com/" class="bx-logo"></a>
       
       <a hidden href="#" class="bx-device-menu" style="display:none">
         <div class="bx-device-menu__inner">
