--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="image-containerRight" id="image-containerRight"></div>
         <div class="image-container-mobile" id="image-container-mobile" ></div>
     </div>
-    <!-- <div class="klaviyo-form-U6mqQh"></div> -->
+    <div class="klaviyo-form-XdgWha"></div>
     <!-- Script -->
     <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=U6mqQh"></script>
     <script src="js/brandx-script.js"></script>
