--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="klaviyo-form-XdgWha"></div>
     <!-- Script -->
-    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=U6mqQh"></script>
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=UniXgz"></script>
     <script src="js/brandx-script.js"></script>
     <script src="js/brandx-script-header.js"></script>    
 </body>
