--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Bon Ton</title>
+    <title>Palais Royal</title>
     <link href="css/brandx-style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0556/9150/9911/files/BonTon_Primary_Icon_Flower_Red.png?v=1625744650" type="image/png">
   <!-- Google Tag Manager -->
