--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       
       <a href="http://palaisroyal.com/" class="bx-logo"></a>
       
-      <a hidden href="#" class="bx-device-menu" style="display:none">
+      <a href="#" class="bx-device-menu" style="display:none">
         <div class="bx-device-menu__inner">
           <span></span>
           <span></span>
